3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------
Changes for SVN:

Implement feature request #1443844: Lock in 1.9.0 is ethernal.
 Added new 'lock' command, locking/unlocking specified item.
 include/sproto.h
 server/c_object.c commands.c
Ryo 2007-01-02

Massive doxygenation of code. Reformat indentation. No functional change.
 include/artifact.h
Ryo 2007-01-02

Implement feature request #1555532: Disallow enchanting armour/weapons while wearing/wielding it.
Weapon/armour will be unequipped (unless cursed) if that would mean the player can't wear it anymore.
 server/apply.c
Ryo 2007-01-02

Fixed some mistakes in the alchemical formulae
 lib/formulae
Yann Chachkoff 2007-01-02

Removed unused defines, documentation fixes, no functional change.
 common/treasure.c: add some links for GT_xxx.
 include/treasure.h: add anchor 'GT_xxx'.
Ryo 2007-01-01

server/player.c: fix wrong message displayed. Make sp test coherent with draining for rod/horn.
Ryo 2007-01-01

Implement feature request #656191: Add blessings and curses to scrolls.
----
New flags: 'blessed', 'known_blessed'.
 common/item.c
 common/loader.l: new flag, and fix mistake on array size.
 include/define.h
----
Randomly set blessed/cursed on scrolls and spellbooks.
 common/treasure.c
----
Blessed/cursed/damned effect for scrolls and books.
 server/apply.c: effects, and also there should be a failure even if settings is no.
----
 server/spell_effect.c: add a check to be done.
Ryo 2007-01-01

Implement feature request #1536177: "Orc Knuckle" requires no dice.
If there is an "dice" archetype in server arches, this command will
require the player to have at least 4 dice to play. There is a 5%